force-app/main/default/objects/Field_Audit__c/Field_Audit__c.object-meta.xml
<CustomObject>
    <description>Object for the auditing of field changes for Fraud and Error and Risk Register long text fields</description>
    <label>Field Audit</label>
    <nameField>
        <displayFormat>FA-{00000}</displayFormat>
        <label>Audit Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Field Audits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>