force-app/main/default/objects/Field_Audit__c/fields/Field_Data_Type__c.field-meta.xml
<CustomField>
    <fullName>Field_Data_Type__c</fullName>
    <label>Field Data Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>