force-app/main/default/objects/Field_Audit__c/fields/Fraud_Error__c.field-meta.xml
<CustomField>
    <fullName>Fraud_Error__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Fraud &amp; Error</label>
    <referenceTo>Fraud_Error__c</referenceTo>
    <relationshipLabel>Field Audits</relationshipLabel>
    <relationshipName>Field_Audits</relationshipName>
    <type>Lookup</type>
</CustomField>