force-app/main/default/objects/Field_Audit__c/fields/Grant_Parent__c.field-meta.xml
<CustomField>
    <fullName>Grant_Parent__c</fullName>
    <externalId>true</externalId>
    <label>Grant Parent</label>
    <length>18</length>
    <type>Text</type>
</CustomField>