force-app/main/default/objects/Field_Audit__c/fields/New_Value__c.field-meta.xml
<CustomField>
    <fullName>New_Value__c</fullName>
    <label>New Value</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>