force-app/main/default/objects/Field_Audit__c/fields/Parent__c.field-meta.xml
<CustomField>
    <fullName>Parent__c</fullName>
    <description>Soft lookup field to the changes parent record</description>
    <externalId>true</externalId>
    <label>Parent</label>
    <length>18</length>
    <type>Text</type>
</CustomField>