force-app/main/default/objects/Field_Audit__c/fields/Risk_Register__c.field-meta.xml
<CustomField>
    <fullName>Risk_Register__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Risk Register</label>
    <referenceTo>Risk_Register__c</referenceTo>
    <relationshipLabel>Field Audits</relationshipLabel>
    <relationshipName>Field_Audits</relationshipName>
    <type>Lookup</type>
</CustomField>