force-app/main/default/objects/Field_Audit__c/fields/Variance__c.field-meta.xml
<CustomField>
    <fullName>Variance__c</fullName>
    <label>Variance</label>
    <length>255</length>
    <type>Text</type>
</CustomField>